@@ -11,7 +11,7 @@ AC_INIT(expect.h)
 # comments in Makefile)
 EXP_MAJOR_VERSION=5
 EXP_MINOR_VERSION=37
-EXP_MICRO_VERSION=0
+EXP_MICRO_VERSION=2
 EXP_VERSION=$EXP_MAJOR_VERSION.$EXP_MINOR_VERSION
 EXP_VERSION_NODOTS=$EXP_MAJOR_VERSION$EXP_MINOR_VERSION
 EXP_VERSION_FULL=$EXP_VERSION.$EXP_MICRO_VERSION
